--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet"href="style.css"
 </head>
 <body>
 <h1>Barbearia Alura</h1>
-<p>localizada no coraçao da cidade a Barbearia Alura traz para o mercado o que ha de melhor para seu cabelo e barba.Fundada em 2019 a Barbearia Alura ja e destaque na cidade e conquista novos clientes cada dia.  </p>
+<p>localizada no coraçao da cidade a <strong>barbearia alura</strong> traz para o mercado o que ha de melhor para seu cabelo e barba.Fundada em 2019 a Barbearia Alura ja e destaque na cidade e conquista novos clientes cada dia.  </p>
 <p>nossa missao e :proporcionar auto-estima qualidade de vida aos clientes</p>
 <p>Orefecemos ptofissionais experientes e antenados as mudanças no mundo da moda .O atendimento possui poderao de excelencia e agilidade garantindo qualidade e satisfaçao dos nossos clientes  </p>
 </body>
