--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li class="itens">atendimento aos clientes</li>
         <li class="itens">Espaço diferenciado</li>
         <li class="itens">Localização</li>
-        <li class="itens">Professionais Qualificado</li>
+        <li class="itens">Profissionais Qualificado</li>
     </ul>
 </div>
 </body>
