--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 </div>
 <div class="beneficios">
     <ul>
-        <li class="itens">atendimento aos clientes</li>
-        <li class="itens">Espaço diferenciado</li>
-        <li class="itens">Localização</li>
-        <li class="itens">Profissionais Qualificado</li>
+        <li class="itens"> Atendimento aos clientes </li>
+        <li class="itens"> Espaço diferenciado </li>
+        <li class="itens"> Localização </li>
+        <li class="itens"> Profissionais Qualificado </li>
     </ul>
 </div>
 </body>
